# src/controller/deliveryController.js
@@ -2,7 +2,6 @@ const Delivery = require("../models/Delivery");
 const Truck = require("../models/Truck");
 const Driver = require("../models/Driver");
 const { object, string, number } = require("yup");
-const logger = require("../service/logger");
 const { Op } = require("sequelize");
 
 module.exports = {
@@ -35,7 +34,6 @@ module.exports = {
       });
 
       if (existingDelivery) {
-        logger.warn("Truck already has an associated ongoing delivery.");
         return res
           .status(409)
           .json({ error: "Truck already has an associated ongoing delivery." });
@@ -55,7 +53,6 @@ module.exports = {
       });
 
       if (deliveriesThisMonth >= 2) {
-        logger.warn("Driver already made two deliveries this month.");
         return res
           .status(409)
           .json({ error: "Driver already made two deliveries this month." });
@@ -75,7 +72,6 @@ module.exports = {
       });
 
       if (truckDeliveriesThisMonth >= 4) {
-        logger.warn("Truck already made four deliveries this month.");
         return res
           .status(409)
           .json({ error: "Truck already made four deliveries this month." });
@@ -96,7 +92,6 @@ module.exports = {
       });
 
       if (destination === "Nordeste" && driverDeliveriesToNordeste >= 1) {
-        logger.warn("Driver already made a delivery to Nordeste this month.");
         return res.status(409).json({
           error: "Driver already made a delivery to Nordeste this month.",
         });
@@ -127,16 +122,13 @@ module.exports = {
         date,
       });
 
-      logger.info("Successful delivery registration");
       return res.status(201).json({ newDelivery });
     } catch (error) {
       if (error.name === "ValidationError") {
         const errors = error.inner.map((e) => e.message);
-        logger.warn(errors.join(", "));
         return res.status(400).json({ errors });
       }
 
-      logger.error("Error when saving delivery data: " + error.message);
       return res.status(500).json({ error: "Internal server error." });
     }
   },
@@ -166,11 +158,10 @@ module.exports = {
 
   async calculateDailyEarnings(req, res) {
     try {
-  
       const deliveries = await Delivery.findAll({
         attributes: ["value", "rate", "status"],
       });
-
+  
       const deliveriesStatus = await Delivery.findAll({
         where: {
           status: "Em andamento",
@@ -178,32 +169,48 @@ module.exports = {
         attributes: ["truckId", "status"],
       });
 
+      const deliveriesStatusDrivers = await Delivery.findAll({
+        where: {
+          status: "Em andamento",
+        },
+        attributes: ["driverId", "status"],
+      });
+  
       const trucks = await Truck.findAll();
-
-      
+      const drivers = await Driver.findAll();
+  
+      const driversInProgress = new Set(
+        deliveriesStatusDrivers.map((delivery) => delivery.driverId)
+      );
+      const availableDrivers = drivers.filter(
+        (driver) => !driversInProgress.has(driver.id)
+      );
+  
       const totalByStatus = deliveries.reduce(
         (totals, delivery) => {
           const deliveryValue = delivery.value + (delivery.rate || 0);
-
+  
           if (delivery.status === "Concluida") {
             totals.completed += deliveryValue;
           } else if (delivery.status === "Em andamento") {
             totals.inProgress += deliveryValue;
           }
-
+  
           totals.all += deliveryValue;
-
+  
           return totals;
         },
         { completed: 0, inProgress: 0, all: 0 }
       );
-
-      logger.info("Success in obtaining information");
+  
       return res.status(200).json({
         totalValue: totalByStatus.all,
         totalTrucks: trucks?.length,
         available: trucks?.length - deliveriesStatus?.length,
         inRotation: deliveriesStatus?.length,
+        totalDrivers: drivers?.length,
+        availableDrivers: availableDrivers?.length,
+        inRotationDrivers: deliveriesStatus?.length,
       });
     } catch (error) {
       console.error(error);
@@ -212,54 +219,56 @@ module.exports = {
         details: error.message,
       });
     }
-  },
+  }
+  ,
   async update(req, res) {
     const schema = object().shape({
       status: string().required("Status is required"),
     });
-  
+
     try {
       await schema.validate(req.body, { abortEarly: false });
-  
+
       const id = req.params.id;
       const { status, deliveryData } = req.body;
-  
+
       const deliveryToAlter = await Delivery.findByPk(id);
-  
+
       if (!deliveryToAlter) {
-        logger.warn("Unable to update, delivery does not exist");
         return res
           .status(404)
           .json({ error: "Unable to update, delivery does not exist" });
       }
-  
+
       if (status) deliveryToAlter.status = status;
       if (deliveryData) {
-        if (deliveryData.destination !== undefined) deliveryToAlter.destination = deliveryData.destination;
-        if (deliveryData.type !== undefined) deliveryToAlter.type = deliveryData.type;
-        if (deliveryData.value !== undefined) deliveryToAlter.value = deliveryData.value;
-        if (deliveryData.truckId !== undefined) deliveryToAlter.truckId = deliveryData.truckId;
-        if (deliveryData.driverId !== undefined) deliveryToAlter.driverId = deliveryData.driverId;
-        if (deliveryData.date !== undefined) deliveryToAlter.date = deliveryData.date;
+        if (deliveryData.destination !== undefined)
+          deliveryToAlter.destination = deliveryData.destination;
+        if (deliveryData.type !== undefined)
+          deliveryToAlter.type = deliveryData.type;
+        if (deliveryData.value !== undefined)
+          deliveryToAlter.value = deliveryData.value;
+        if (deliveryData.truckId !== undefined)
+          deliveryToAlter.truckId = deliveryData.truckId;
+        if (deliveryData.driverId !== undefined)
+          deliveryToAlter.driverId = deliveryData.driverId;
+        if (deliveryData.date !== undefined)
+          deliveryToAlter.date = deliveryData.date;
         deliveryToAlter.deliveryData = deliveryData;
       }
-  
+
       deliveryToAlter.updatedAt = new Date();
-  
+
       await deliveryToAlter.save();
-  
-      logger.info("Delivery updated successfully");
+
       return res.status(200).json(deliveryToAlter);
     } catch (error) {
-      logger.error("Error when saving data: " + error.message);
       if (error.name === "ValidationError") {
         return res.status(400).json({ error: error.errors });
       }
       return res.status(500).json({ error: "Internal server error." });
     }
-  }
-,  
-
+  },
   async delete(req, res) {
     try {
       const { id } = req.params;
@@ -267,18 +276,15 @@ module.exports = {
       const deliveryToDelete = await Delivery.findByPk(id);
 
       if (!deliveryToDelete) {
-        logger.warn(`Delivery with ID ${id} does not exist.`);
         return res.status(404).json({ error: "Delivery does not exist." });
       }
 
       await deliveryToDelete.destroy();
 
-      logger.info(`Delivery with ID ${id} was successfully deleted.`);
       return res
         .status(200)
         .json({ message: "Delivery successfully deleted." });
     } catch (error) {
-      logger.error("Error when deleting delivery: " + error.message);
       return res.status(500).json({ error: "Internal server error." });
     }
   },
